# git-live

./: .clang-format  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  main.yml  release.yml
lib/: err.c  err.h  list.h
lib/layout/: Makefile  layout.c  layout.h
package_files/: git-live-attach.sh  git-live-dettach.sh  git-live.sh
src/: attach.c  attach.h  dashboard.c  dashboard.h  err.h  layout.c  layout.h  list.h  main.c  ncurses_layout.c  ncurses_layout.h  timing.c  timing.h  utils.c  utils.h
tests/: Makefile  pyproject.toml
tests/test_lib/test_layout/: conftest.py  test_layout.py
tests/test_lib/test_layout/utils/: library.py  screen.py
