[tool.poetry]
name = "git-live-tests"
version = "0.1.0"
description = ""
authors = ["yanay goor"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"
autoflake = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"